[package]
name = "tesseral-axum"
version = "0.1.0"
edition = "2021"
description = "Tesseral SDK for Axum web framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tesseral-labs/tesseral-sdk-axum"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
aws-lc-rs = "1.13.1"
base64 = "0.21.7"
reqwest = { version = "0.12.19", features = ["json"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
regex = "1.10.3"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
