[package]
name = "tesseral-axum"
version = "0.0.1"
edition = "2021"
description = "Tesseral SDK for Axum"
license = "MIT"
repository = "https://github.com/tesseral-labs/tesseral-sdk-axum"
exclude = ["src/authenticate_access_token_tests.json"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-lc-rs = "1"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
regex = "1"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
